# ChangeLog for dev-python/pydelicious
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Mar 2012; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added missing remote-id metadata entry.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> pydelicious-0.6.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> pydelicious-0.6.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> pydelicious-0.6.ebuild:
  Removed Python 2.4 support.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  13 Jan 2011; James Rowe <jnrowe@gmail.com>
  -files/pydelicious-0.5.0-hashlib.patch, -pydelicious-0.5.2_rc2.ebuild,
  -files/pydelicious-0.5.2_rc2-hashlib.patch, pydelicious-0.6.ebuild:
  Keyworded x86.

  13 Jan 2011; James Rowe <jnrowe@gmail.com> pydelicious-0.6.ebuild:
  Keyworded amd64.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

*pydelicious-0.6 (15 Dec 2010)

  15 Dec 2010; James Rowe <jnrowe@gmail.com> +pydelicious-0.6.ebuild:
  Version bump [238].

  21 Mar 2010; James Rowe <jnrowe@gmail.com> pydelicious-0.5.2_rc2.ebuild:
  Added PYTHON_DEPEND setting.

  14 Feb 2010; James Rowe <jnrowe@gmail.com> pydelicious-0.5.2_rc2.ebuild:
  Incompatible with python 2.4 due to xml.etree usage, and incompatible with
  3.x due to raise syntax.

  04 Jan 2010; James Rowe <jnrowe@gmail.com> pydelicious-0.5.2_rc2.ebuild:
  Extract zip in to its own top-level dir(cosmetic).

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pydelicious-0.5.2_rc2.ebuild:
  Switched to EAPI 2.

  22 Sep 2009; James Rowe <jnrowe@gmail.com> -pydelicious-0.5.0.ebuild:
  Punting old version.

  22 Sep 2009; James Rowe <jnrowe@gmail.com> pydelicious-0.5.2_rc2.ebuild:
  Keyworded x86.

  22 Sep 2009; James Rowe <jnrowe@gmail.com> pydelicious-0.5.2_rc2.ebuild:
  Keyworded amd64.

  14 Jul 2009; James Rowe <jnrowe@gmail.com> pydelicious-0.5.2_rc2.ebuild: