@@ -1,14 +1,15 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup unpack
-DEPEND=app-arch/unzip dev-python/setuptools =dev-lang/python-2*
+DEFINED_PHASES=compile configure install prepare pretend test unpack
+DEPEND=app-arch/unzip dev-python/setuptools python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
 DESCRIPTION=Access the web service of del.icio.us via it's API through python
 EAPI=4
 HOMEPAGE=http://code.google.com/p/pydelicious/
-IUSE=minimal
+IUSE=minimal python_targets_python2_5 python_targets_python2_6 python_targets_python2_7
 KEYWORDS=amd64 x86
 LICENSE=BSD
-RDEPEND=!minimal? ( dev-python/feedparser ) =dev-lang/python-2*
+RDEPEND=!minimal? ( dev-python/feedparser ) python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
+REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 )
 RESTRICT=test
 SLOT=0
 SRC_URI=http://pydelicious.googlecode.com/files/pydelicious-0.6.zip
-_eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	6891f6f484e3b44a0a15e1b0c0fc9a14	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	36d7e2b7aa4dce62364c72eec96610cf	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=314369bc0c103053cde5e87128cc4269
+_eclasses_=python-distutils-ng	9c728fa97679b3ca2742cf8ccd260599
+_md5_=f57f581542b6d462849e8d9100d89451
